# hashtree-js

./: .eslintrc.js  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.debian-aarch64  build.rs  index.d.ts  index.js  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsup.config.ts
.cargo/: config.toml
.github/: CI.yml
.github/workflows/: CI-revised.yml  CI.yml
__test__/: index.spec.mjs
lib/: bindings.ts  index.js  index.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: checkPackageVersions.ts  updateNpmVersions.ts
src/: lib.rs
test/: index.spec.ts
test/perf/: hash_one_milion_times.js  hash_one_milion_times.ts
